@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_listener_data.c,v 1.26 2005-07-26 20:17:23 achu Exp $
+ *  $Id: cerebrod_listener_data.c,v 1.27 2005-08-25 00:25:31 achu Exp $
  *****************************************************************************
  *  Copyright (C) 2005 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -28,6 +28,8 @@
 #if HAVE_CONFIG_H
 #include "config.h"
 #endif /* HAVE_CONFIG_H */
+
+#if !WITH_CEREBROD_SPEAKER_ONLY
 
 #include <stdio.h>
 #include <stdlib.h>
@@ -875,3 +877,6 @@ cerebrod_listener_data_update(char *nodename,
   _listener_data_list_dump();
   _metric_names_index_dump();
 }
+
+#endif /* !WITH_CEREBROD_SPEAKER_ONLY */
+
