@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_metric_server.c,v 1.31 2005-07-27 00:29:22 achu Exp $
+ *  $Id: cerebrod_metric_server.c,v 1.32 2005-08-25 00:25:31 achu Exp $
  *****************************************************************************
  *  Copyright (C) 2005 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
@@ -28,6 +28,8 @@
 #if HAVE_CONFIG_H
 #include "config.h"
 #endif /* HAVE_CONFIG_H */
+
+#if !WITH_CEREBROD_SPEAKER_ONLY
 
 #include <stdio.h>
 #include <stdlib.h>
@@ -1034,3 +1036,5 @@ cerebrod_metric_server(void *arg)
 
   return NULL;			/* NOT REACHED */
 }
+
+#endif /* !WITH_CEREBROD_SPEAKER_ONLY */
